--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
   "bugs": {
     "url": "https://github.com/ujw0l/image-carousel/issues"
   },
-  "homepage": "https://github.com/ujw0l/image-carousel#readme"
+  "homepage": "https://ujw0l.github.io/image-carousel/"
 }
